# atech-hackathon

./: .gitignore  HANDOVER.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
brand/: brand-directions.html
controller/: project.yaml
controller-verify/: project.yaml
docs/: ARCHITECTURE.md  GAMES.md  HANDOVER.md  HARDWARE.md  PLAN.md  STATE.md  THEMES.md
firmware/brain/: platformio.ini
firmware/screen/: platformio.ini
games/_sdk/: font3x5.h  registry.h  rng.h  runner.h  sdk.h
games/ambient/: ambient.cpp  ambient.h
games/demo/: demo.cpp  demo.h
games/doodlejump/: doodlejump.cpp  doodlejump.h
games/eggcatch/: eggcatch.cpp  eggcatch.h
games/flappy/: flappy.cpp  flappy.h
games/invaders/: invaders.cpp  invaders.h
games/jukebox/: jukebox.cpp  jukebox.h
games/pong/: pong.cpp  pong.h
games/racing/: racing.cpp  racing.h
games/snake/: snake.cpp  snake.h
gtm/: README.md  bom-and-margin.md  business-model-canvas.md  pitch.md  roadmap.md
host/dashboard/: dashboard.js  index.html
include/console/: audio.h  canvas.h  color.h  config.h  frame_proto.h  game.h  host_proto.h  input.h  theme.h  themes.cpp  themes.h
modules/console_e2e/: Makefile  test_e2e.cpp
modules/console_os/: Makefile  brain_os.cpp  menu.h  (+16 more)
pitch/: index.html  speaker-script.md
screen/: project.yaml
screen-identify/: project.yaml
sim/: Makefile  Makefile.menu  game_main.cpp  host_tft.h  main.cpp  menu_dump.cpp  menu_gif.py  stub_theme.h
tools/: ci.sh  console_bridge.py  fake_controller.py  serial_bridge.py  twin_server.py
web/: build.sh  main_wasm.cpp
(+94 files in other folders)
